--- a/client/index.html
+++ b/client/index.html
@@ -1,17 +1,48 @@
 <!doctype html>
-<html >
-  <head>
-      <script src="../node_modules/angular/angular.min.js"></script>
-      <script src="../node_modules/angular-route/angular-route.min.js"></script>
-      <script src="main.js"></script>
-      <link rel="stylesheet" href="./node_modules/tailwindcss/dist/tailwind.min.css">
-      <title>
-          DashBoard App
-      </title>
-  </head>
-  <body ng-app="App">
-    <div class="container mx-auto">
-        <div ng-view></div>
-    </div>
-  </body>
+<html>
+
+<head>
+  <script src="../node_modules/angular/angular.min.js"></script>
+  <script src="../node_modules/angular-route/angular-route.min.js"></script>
+  <script src="./node_modules/chart.js/dist/Chart.min.js"></script>
+  <script src="./node_modules/angular-chart.js/dist/angular-chart.min.js"></script>
+  <script src="main.js"></script>
+  <link rel="stylesheet" href="./node_modules/tailwindcss/dist/tailwind.min.css">
+  <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+  <link rel="stylesheet" href="./node_modules/chart.js/dist/Chart.min.css">
+  <title>
+    DashBoard App
+  </title>
+</head>
+
+<body ng-app="App">
+    <nav class="flex items-center justify-between flex-wrap bg-teal p-4">
+        <div class="flex items-center flex-no-shrink text-white mr-6 cursor-pointer">
+          <svg class="fill-current h-8 w-8 mr-2" width="54" height="54" viewBox="0 0 54 54" xmlns="http://www.w3.org/2000/svg"><path d="M13.5 22.1c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05zM0 38.3c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05z"/></svg>
+          <span class="font-semibold text-xl tracking-tight ">DashBoard</span>
+        </div>
+        <div class="block lg:hidden">
+          <button class="flex items-center px-3 py-2 border rounded text-teal-lighter border-teal-light hover:text-white hover:border-white">
+            <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
+          </button>
+        </div>
+        <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto ml-4 ">
+          <div class="text-sm lg:flex-grow">
+            <a href="/" class="block mt-4 lg:inline-block lg:mt-0 text-teal-lighter hover:text-white mr-4">
+              Home
+            </a>
+            <a href="/#!/cadastros" class="block mt-4 lg:inline-block lg:mt-0 text-teal-lighter hover:text-white mr-4">
+              Cadastros
+            </a>
+            <a href="/#!/sobre" class="block mt-4 lg:inline-block lg:mt-0 text-teal-lighter hover:text-white">
+              Sobre
+            </a>
+          </div>
+        </div>
+      </nav>
+  <div class="container mx-auto">
+    <div ng-view></div>
+  </div>
+</body>
+
 </html>
