--- a/client/index.html
+++ b/client/index.html
@@ -6,12 +6,15 @@
   <script src="../node_modules/angular-route/angular-route.min.js"></script>
   <script src="./node_modules/chart.js/dist/Chart.min.js"></script>
   <script src="./node_modules/angular-chart.js/dist/angular-chart.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
 
   <link rel="stylesheet" href="./node_modules/tailwindcss/dist/tailwind.min.css">
   <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
   <link rel="stylesheet" href="./node_modules/chart.js/dist/Chart.min.css">
   <link rel="stylesheet" href="./node_modules/animate.css/animate.min.css">
   <link rel="stylesheet" href="css/imagehover.min.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
+
 
   <title>
     DashBoard App
@@ -57,7 +60,7 @@
   </div>
   <script src="js/app.js"></script>
   <script src="js/controller.js"></script>
-  <script src="js/components.js"></script>
+  <script src="js/service.js"></script>
   <!-- <script src="js/service.js"></script> -->
 </body>
 
