--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body ng-app="App">
-  <nav class="flex items-center justify-between flex-wrap bg-teal p-4">
+  <nav class="flex fixed w-full bg-grey pin-t items-center justify-between flex-wrap bg-teal p-4">
     <div class="flex items-center flex-no-shrink text-white mr-6 cursor-pointer">
       <svg class="fill-current h-8 w-8 mr-2" width="54" height="54" viewBox="0 0 54 54"
         xmlns="http://www.w3.org/2000/svg">
@@ -32,18 +32,9 @@
       </svg>
       <span class="font-semibold text-xl tracking-tight ">DashBoard</span>
     </div>
-    <div class="block lg:hidden">
-      <button
-        class="flex items-center px-3 py-2 border rounded text-teal-lighter border-teal-light hover:text-white hover:border-white">
-        <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-          <title>Menu</title>
-          <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
-        </svg>
-      </button>
-    </div>
-    <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto ml-4 ">
-      <div class="text-sm lg:flex-grow">
-        <a href="/" class="block mt-4 lg:inline-block lg:mt-0 text-teal-lighter hover:text-white mr-4">
+    <div class="w-full block flex-grow flex items-center lg:w-auto ml-4 ">
+      <div class="text-sm flex-grow">
+        <a href="/" class="block mt-4 inline-block lg:mt-0 text-teal-lighter hover:text-white mr-4">
           Home
         </a>
         <a href="/#!/cadastros" class="block mt-4 lg:inline-block lg:mt-0 text-teal-lighter hover:text-white mr-4">
@@ -55,12 +46,13 @@
       </div>
     </div>
   </nav>
-  <div class="container mx-auto">
+  <div class="container mx-auto pt-16">
     <div ng-view></div>
   </div>
   <script src="js/app.js"></script>
   <script src="js/controller.js"></script>
   <script src="js/service.js"></script>
+  <script src="js/components.js"></script>
   <!-- <script src="js/service.js"></script> -->
 </body>
 
