--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="./node_modules/chart.js/dist/Chart.min.css">
   <link rel="stylesheet" href="./node_modules/animate.css/animate.min.css">
   <link rel="stylesheet" href="css/imagehover.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
 
 
