Adjust alerts, fix bugs, view about, added more graphs

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   <script src="../node_modules/angular-route/angular-route.min.js"></script>
   <script src="./node_modules/chart.js/dist/Chart.min.js"></script>
   <script src="./node_modules/angular-chart.js/dist/angular-chart.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.min.js"></script>
 
   <link rel="stylesheet" href="./node_modules/tailwindcss/dist/tailwind.min.css">
   <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
@@ -14,7 +14,6 @@
   <link rel="stylesheet" href="./node_modules/animate.css/animate.min.css">
   <link rel="stylesheet" href="css/imagehover.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
 
 
   <title>
